@@ -37,6 +37,19 @@ class CategoryPage extends Article {
 		}
 	}
 
+	/**
+	 * This page should not be cached if 'from' or 'until' has been used
+	 * @return bool
+	 */
+	function isFileCacheable() {
+		global $wgRequest;
+
+		return ( ! Article::isFileCacheable()
+				|| $wgRequest->getVal( 'from' )
+				|| $wgRequest->getVal( 'until' )
+		) ? false : true;
+	}
+
 	function openShowCategory() {
 		# For overloading
 	}
@@ -410,7 +423,7 @@ class CategoryViewer {
 	 * @private
 	 */
 	function pagingLinks( $title, $first, $last, $limit, $query = array() ) {
-		global $wgUser, $wgLang;
+		global $wgLang;
 		$sk = $this->getSkin();
 		$limitText = $wgLang->formatNum( $limit );
 
